[package]
name = "epoll_test"
version = "0.1.1"
edition = "2021"
author = "dmicheal (shuiko1@163.com)"
license = "MIT/Apache-2.0"
repository = "https://github.com/ProgramAPE/epoll_test.git"
description = "a test lib for epoll kqueue project with some usefull lib"
keywords = ["epoll", "kqueue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.9.0"
tokio = "1.36.0"
